===== 1.7.9 (Apr 22, 2013) =====
* Fixed Ukrainian hyphenations
* Fixed missing paragraph before new section issue (in some book formats)
* Fixed library/bookmarks start
* Georgian in language list in book info dialog

===== 1.7.8 (Mar 24, 2013) =====
* Fixed library scanning: all books are visible in the library
* Updated Czech & Norwegian translations
* Library saves book uids
* Calls for (possible) external library & bookmarks activities

===== 1.7.7 (Mar 14, 2013) =====
* Fixed XML parsing
* Fixed series order in library

===== 1.7.6 (Mar 13, 2013) =====
* Fixed several possible NPEs

===== 1.7.4/5 (Mar 11, 2013) =====
* Book/bookmark deserializer: SAX instead of our own XML parser
* Georgian localization (by Bookland.ge)
* Interface language option
* Book sort order in Library omits leading articles
* Fixed "screen stays switched on while locked" issue

===== 1.7.3 (Mar 04, 2013) =====
* Library service does not work in background after program closing
* We do not obfuscate code
* Fixed issue in 'Books sorted by title' library catalog: viewing book info does not remove book from the list
* Fixed issue with large (1000+) bookmarks collection opening

===== 1.7.2 (Feb 22, 2013) =====
* Restored android:changes attribute for all activities
* Fixed possible NPE in BookmarksActivity

===== 1.7.1 (Feb 18, 2013) =====
* Fixed several NPEs

===== 1.7 (Feb 17, 2013) =====
* Introduced library service; FBReader loads library in background
* Fixed issue for XHTML files with several body tags (sometimes produced by Calibre)
* Fixed navigation popup text
* Fixed NPE in findViewById in the main activity
* Popup dictionary (https://play.google.com/store/apps/details?id=com.barisatamer.popupdictionary) integration
* Catalan localization (by Alfonso Montero)
* Open 'additional links in network library' with correct orientation
* Some incorrect FB2 files support (li/i/b tags, href attributes with no namespace and with unknown namespace ids) -- e.g. CoolReader manual