@@ -3,6 +3,7 @@
 * Fixed missing paragraph before new section issue (in some book formats)
 * Fixed library/bookmarks start
 * Georgian in language list in book info dialog
+* Fixed interface language swithcing (change language immediately in menu, library, etc.)
 
 ===== 1.7.8 (Mar 24, 2013) =====
 * Fixed library scanning: all books are visible in the library
